Fix navbar on small screen

--- a/src/sass/_module.sass
+++ b/src/sass/_module.sass
@@ -10,6 +10,10 @@
 .nav-link:hover
     color: $light-gray
 
+.navbar-toggler
+    color: $primary-color
+    border: var(--bs-border-width) solid $primary-color
+
 .hero
     background-color: $secondary-color
 
